# Prospector

./: .env.example  .gitignore  BUGS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  project_plan.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20260331134907_9ffc8d1bf946_initial_tables_profiles_and_job_postings.py  20260402130037_9d9ae9f26286_add_apply_links_jsonb_to_job_postings.py
app/: config.py  main.py  scheduler.py
app/api/: jobs.py  profiles.py  views.py
app/db/: database.py  models.py
app/schemas/: schemas.py
app/services/: evaluator.py  resume_parser.py  scraper.py
app/templates/: base.html  dashboard.html  job_detail.html  profiles.html
docs/: end-to-end-flow.md  evaluation-pipeline.md  scraping-pipeline.md
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: CreateProfileModal.tsx  EditProfileModal.tsx  Filters.tsx  JobDetail.tsx  JobTable.tsx  ScoreBadge.tsx  StatusBadge.tsx
frontend/src/types/: index.ts
prompts/: evaluator_human.txt  evaluator_system.txt  scorer_system.txt
tests/: conftest.py  test_api_jobs.py  test_api_profiles.py  test_config.py  test_evaluator.py  test_models.py  test_resume_parser.py  test_scraper.py  test_views.py
