[project]
name = "prospector"
version = "0.1.0"
description = "AI-powered job search pipeline — scrape, score, and generate tailored cover letters"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.2",
    "google-search-results>=2.4.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.14",
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.23",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
